# plato-serialize

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: lib.rs  lib_tests.rs
