[package]
name = "plato-serialize"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Efficient binary serialization for PLATO tiles optimized for low-bandwidth links"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
